--- a/market.html
+++ b/market.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <!-- link swiper js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <!-- Favico -->
+     <link rel="apple-touch-icon" sizes="180x180" href="favico/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favico/favicon_io/favicon-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favico/favicon_io/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favico/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favico/favicon_io/favicon-16x16.png">
+    <link rel="icon" href="favico/favicon_io/favicon.ico">
+    <link rel="manifest" href="favico/favicon_io/site.webmanifest">
 </head>
 
 <body>
