--- a/market.html
+++ b/market.html
@@ -131,8 +131,8 @@
         <div class="contact-box address">
             <h3>Contact</h3>
             <i class='bx bxs-phone' ><span>+62 888 999 888 </span></i>
-            <i class='bx bxs-map'><span>Street Panglima Polim, Jakarta</span></i>
-            <i class='bx bx-envelope' ><span>makancuy@gmail.com</span></i>
+            <i class='bx bxs-map'><span>SMK Taruna Bhakti</span></i>
+            <i class='bx bx-envelope' ><span>adoramart@gmail.com</span></i>
         </div>
 
     </section>
